# compute-shader-101

./: Cargo.toml
.cargo/: config
compute-shader-toy/: Cargo.toml
compute-shader-toy/src/: blit.wgsl  buddhabrot.wgsl  caustics.wgsl  compute.wgsl  main.rs  paint.wgsl
run-wasm/: Cargo.toml
run-wasm/src/: index.template.html  main.rs
