[package]
name = "compute-shader-toy"
version = "0.1.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT/Apache-2.0"
description = "A simple compute shader example that draws in a window, based on wgpu."
edition = "2021"

[dependencies]
wgpu = { version = "0.12.0"}
winit = "0.26"
pollster = "0.2"
async-executor = "1.4"
bytemuck = "1.7.1"
log = "0.4"
env_logger = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2"
js-sys = "0.3.50"
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = "0.4.23"
web-sys = "0.3.22"
